--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <distributionManagement>
     <site>
-      <id>site-server</id>
+      <id>site-servellr</id>
       <name>Test Project Site</name>
       <url>file:///tmp/maven-project-site</url>
     </site>
